# argcorrector

./: .flake8  argcorrector.py  pyproject.toml  stdlib-blacklist.txt
