[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
name = "argcorrector"
version = "0.0.0"
description = "Correct parameter names in stubs"
requires-python = ">=3.7"
dependencies = ["libcst", "termcolor>=2", "typeshed_client>=2.2.0", "tomli"]

[project.scripts]
argcorrector = "argcorrector:main"

[project.optional-dependencies]
dev = [
    "black==23.1.0",             # Must match .pre-commit-config.yaml
    "flake8-bugbear==23.2.13",
    "flake8-noqa==1.3.0",
    "flake8-simplify",
    "isort==5.12.0",             # Must match .pre-commit-config.yaml
    "mypy==1.0.1",
    "pre-commit-hooks==4.4.0",   # Must match .pre-commit-config.yaml
    "pytest",
]

[tool.pycln]
all = true
disable_all_dunder_policy = true

[tool.black]
line_length = 88
skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
line_length = 88
combine_as_imports = true
skip_gitignore = true

[tool.mypy]
files = ['*.py']
show_traceback = true
pretty = true
strict = true
enable_error_code = 'ignore-without-code,redundant-expr,possibly-undefined'
warn_unreachable = true
